Finished the loading mechanism of the new configuration.